--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <header>
         <h1>Welcome to HustleOS</h1>
-        <p>The Linux OS built for hustlers, creators, and innovators.</p>
+        <p>The Linux OS built for productivity, performance, and getting the most out of your PC.</p>
     </header>
     <nav>
         <a href="index.html#about">About</a>
