--- a/downloads.html
+++ b/downloads.html
@@ -90,7 +90,7 @@
         </div>
         <div class="download-card">
             <h3>HustleOS 32-bit (ISO)</h3>
-            <p>No support for the moment.</p>
+            <p>No longer any support.</p>
         </div>
         <div class="download-card">
             <h3>HustleOS Documentation</h3>
