Add logo to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             padding: 20px 0;
             text-align: center;
         }
+        header img {
+            width: 100px; /* Adjust the size of the logo as needed */
+            height: auto;
+            margin-bottom: 10px;
+        }
         nav {
             background: #333;
             color: white;
@@ -63,6 +68,7 @@
 </head>
 <body>
     <header>
+        <img src="logo.png" alt="HustleOS Logo">
         <h1>Welcome to HustleOS</h1>
         <p>The Linux OS built for productivity, performance, and getting the most out of your PC.</p>
     </header>
@@ -75,6 +81,7 @@
     <section id="about">
         <h2>About HustleOS</h2>
         <p>HustleOS is a fast, secure, and customizable Linux distribution based on Ubuntu. Designed to empower creators, developers, and everyday users, HustleOS blends cutting-edge features with a seamless user experience.</p>
+    </section>
     <section id="download">
         <h2>Download HustleOS</h2>
         <p>Ready to power your hustle? <a href="downloads.html">Click here to download the latest version of HustleOS.</a></p>
@@ -95,5 +102,6 @@
                 <p>Keep your data safe with built-in encryption and regular security updates.</p>
             </div>
         </div>
+    </section>
 </body>
 </html>
