--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="HustleOS Logo">
+        <img src="Logo.png" alt="HustleOS Logo">
         <h1>Welcome to HustleOS</h1>
         <p>The Linux OS built for productivity, performance, and getting the most out of your PC.</p>
     </header>
